FDG-4701 Fixed mobile spacing to align with content

--- a/src/layouts/explainer/explainer-related-datasets/explainer-related-datasets.module.scss
+++ b/src/layouts/explainer/explainer-related-datasets/explainer-related-datasets.module.scss
@@ -10,6 +10,12 @@
   margin-bottom: 1em;
 }
 
+@media screen and (min-width: $breakpoint-sm) {
+  .paddingAdjust {
+    max-width: 100%;
+  }
+}
+
 @media screen and (min-width: $breakpoint-md){
   .cardWrapper {
     display: inline-flex;
